Readme P1/traffic_sign

--- a/CarND-LaneLines-P1/P1.ipynb
+++ b/CarND-LaneLines-P1/P1.ipynb
@@ -9,42 +9,26 @@
     "\n",
     "## Project: **Finding Lane Lines on the Road** \n",
     "***\n",
-    "In this project, you will use the tools you learned about in the lesson to identify lane lines on the road.  You can develop your pipeline on a series of individual images, and later apply the result to a video stream (really just a series of images). Check out the video clip \"raw-lines-example.mp4\" (also contained in this repository) to see what the output should look like after using the helper functions below. \n",
+    "In this project, we will use the basic tools we learned about in the lesson to identify lane lines on the road.  We will first develop a pipeline on a series of individual images, and later apply the result to a video stream. \n",
     "\n",
-    "Once you have a result that looks roughly like \"raw-lines-example.mp4\", you'll need to get creative and try to average and/or extrapolate the line segments you've detected to map out the full extent of the lane lines.  You can see an example of the result you're going for in the video \"P1_example.mp4\".  Ultimately, you would like to draw just one line for the left side of the lane, and one for the right.\n",
-    "\n",
-    "In addition to implementing code, there is a brief writeup to complete. The writeup should be completed in a separate file, which can be either a markdown file or a pdf document. There is a [write up template](https://github.com/udacity/CarND-LaneLines-P1/blob/master/writeup_template.md) that can be used to guide the writing process. Completing both the code in the Ipython notebook and the writeup template will cover all of the [rubric points](https://review.udacity.com/#!/rubrics/322/view) for this project.\n",
-    "\n",
-    "---\n",
-    "Let's have a look at our first image called 'test_images/solidWhiteRight.jpg'.  Run the 2 cells below (hit Shift-Enter or the \"play\" button above) to display the image.\n",
-    "\n",
-    "**Note: If, at any point, you encounter frozen display windows or other confounding issues, you can always start again with a clean slate by going to the \"Kernel\" menu above and selecting \"Restart & Clear Output\".**\n",
-    "\n",
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**The tools you have are color selection, region of interest selection, grayscaling, Gaussian smoothing, Canny Edge Detection and Hough Tranform line detection.  You  are also free to explore and try other techniques that were not presented in the lesson.  Your goal is piece together a pipeline to detect the line segments in the image, then average/extrapolate them and draw them onto the image for display (as below).  Once you have a working pipeline, try it out on the video stream below.**\n",
-    "\n",
-    "---\n",
+    "    \n",
+    "Once we have a result that looks roughly like,  \n",
     "\n",
     "<figure>\n",
     " <img src=\"examples/line-segments-example.jpg\" width=\"380\" alt=\"Combined Image\" />\n",
     " <figcaption>\n",
     " <p></p> \n",
-    " <p style=\"text-align: center;\"> Your output should look something like this (above) after detecting line segments using the helper functions below </p> \n",
     " </figcaption>\n",
+    "    \n",
+    "we'll need to get creative and try to average and/or extrapolate the line segments we've detected to map out the full extent of the lane lines to get something like\n",
+    "\n",
     "</figure>\n",
     " <p></p> \n",
     "<figure>\n",
     " <img src=\"examples/laneLines_thirdPass.jpg\" width=\"380\" alt=\"Combined Image\" />\n",
     " <figcaption>\n",
     " <p></p> \n",
-    " <p style=\"text-align: center;\"> Your goal is to connect/average/extrapolate line segments to get output like this</p> \n",
-    " </figcaption>\n",
+    "  </figcaption>\n",
     "</figure>"
    ]
   },
@@ -52,7 +36,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Run the cell below to import some packages.  If you get an `import error` for a package you've already installed, try changing your kernel (select the Kernel menu above --> Change Kernel).  Still have problems?  Try relaunching Jupyter Notebook from the terminal prompt.  Also, consult the forums for more troubleshooting tips.**  "
+    "The tools we have for that are \n",
+    "\n",
+    "* color selection\n",
+    "* region of interest selection\n",
+    "* grayscaling, Gaussian smoothing\n",
+    "* Canny Edge Detection \n",
+    "* Hough Tranform line detection. \n",
+    "\n",
+    "Our goal is piece together a pipeline to detect the line segments in the image, then average/extrapolate them and draw them onto the image for display (as below).  "
    ]
   },
   {
@@ -144,9 +136,7 @@
     "`cv2.addWeighted()` to coadd / overlay two images\n",
     "`cv2.cvtColor()` to grayscale or change color\n",
     "`cv2.imwrite()` to output images to file  \n",
-    "`cv2.bitwise_and()` to apply a mask to an image\n",
-    "\n",
-    "**Check out the OpenCV documentation to learn about these and discover even more awesome functionality!**"
+    "`cv2.bitwise_and()` to apply a mask to an image\n"
    ]
   },
   {
@@ -160,7 +150,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Below are some helper functions to help get you started. They should look familiar from the lesson!"
+    "Below are some helper functions to help get us started. "
    ]
   },
   {
@@ -321,8 +311,7 @@
    "source": [
     "## Test Images\n",
     "\n",
-    "Build your pipeline to work on the images in the directory \"test_images\"  \n",
-    "**You should make sure your pipeline works well on these images before you try the videos.**"
+    "Build our pipeline to work on the images in the directory \"test_images\"  "
    ]
   },
   {
@@ -1017,13 +1006,7 @@
       " 50%|████▉     | 338/682 [00:20<00:22, 15.32it/s]\u001b[A\n",
       " 50%|████▉     | 340/682 [00:20<00:22, 15.04it/s]\u001b[A\n",
       " 50%|█████     | 342/682 [00:21<00:22, 14.88it/s]\u001b[A\n",
-      " 50%|█████     | 344/682 [00:21<00:23, 14.59it/s]\u001b[A\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      " 50%|█████     | 344/682 [00:21<00:23, 14.59it/s]\u001b[A\n",
       " 51%|█████     | 346/682 [00:21<00:22, 14.84it/s]\u001b[A\n",
       " 51%|█████     | 348/682 [00:21<00:22, 14.54it/s]\u001b[A\n",
       " 51%|█████▏    | 350/682 [00:21<00:22, 14.73it/s]\u001b[A\n",
@@ -1449,13 +1432,7 @@
       " 75%|███████▍  | 187/251 [00:23<00:10,  6.16it/s]\u001b[A\n",
       " 75%|███████▍  | 188/251 [00:23<00:10,  6.05it/s]\u001b[A\n",
       " 75%|███████▌  | 189/251 [00:23<00:10,  6.08it/s]\u001b[A\n",
-      " 76%|███████▌  | 190/251 [00:23<00:09,  6.11it/s]\u001b[A\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      " 76%|███████▌  | 190/251 [00:23<00:09,  6.11it/s]\u001b[A\n",
       " 76%|███████▌  | 191/251 [00:23<00:10,  5.58it/s]\u001b[A\n",
       " 76%|███████▋  | 192/251 [00:23<00:10,  5.88it/s]\u001b[A\n",
       " 77%|███████▋  | 193/251 [00:24<00:09,  5.89it/s]\u001b[A\n",
@@ -1576,122 +1553,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  adding: writeup_template.md (deflated 57%)\n",
-      "  adding: README.md (deflated 54%)\n",
-      "  adding: test_images/ (stored 0%)\n",
-      "  adding: test_images/solidWhiteCurve.jpg (deflated 2%)\n",
-      "  adding: test_images/solidYellowCurve.jpg (deflated 3%)\n",
-      "  adding: test_images/solidYellowLeft.jpg (deflated 4%)\n",
-      "  adding: test_images/whiteCarLaneSwitch.jpg (deflated 2%)\n",
-      "  adding: test_images/solidYellowCurve2.jpg (deflated 2%)\n",
-      "  adding: test_images/solidWhiteRight.jpg (deflated 4%)\n",
-      "  adding: examples/ (stored 0%)\n",
-      "  adding: examples/grayscale.jpg (deflated 6%)\n",
-      "  adding: examples/P1_example.mp4 (deflated 0%)\n",
-      "  adding: examples/line-segments-example.jpg (deflated 2%)\n",
-      "  adding: examples/laneLines_thirdPass.jpg (deflated 1%)\n",
-      "  adding: examples/raw-lines-example.mp4 (deflated 0%)\n",
-      "  adding: current_submission.zip (stored 0%)\n",
-      "  adding: test_videos/ (stored 0%)\n",
-      "  adding: test_videos/solidYellowLeft.mp4 (deflated 0%)\n",
-      "  adding: test_videos/challenge.mp4 (deflated 0%)\n",
-      "  adding: test_videos/solidWhiteRight.mp4 (deflated 0%)\n",
-      "  adding: P1.ipynb (deflated 27%)\n",
-      "  adding: LICENSE (deflated 41%)\n",
-      "  adding: test_videos_output/ (stored 0%)\n",
-      "  adding: test_videos_output/solidYellowLeft.mp4 (deflated 0%)\n",
-      "  adding: test_videos_output/challenge.mp4 (deflated 0%)\n",
-      "  adding: test_videos_output/solidWhiteRight.mp4 (deflated 0%)\n",
-      "  adding: test_videos_output/ignore.txt (stored 0%)\n",
-      "  adding: test_images_output/ (stored 0%)\n",
-      "  adding: test_images_output/solidYellowCurve2first.jpg (deflated 0%)\n",
-      "  adding: test_images_output/solidWhiteCurveimproved.jpg (deflated 0%)\n",
-      "  adding: test_images_output/solidWhiteRightfirst.jpg (deflated 0%)\n",
-      "  adding: test_images_output/solidWhiteRightimproved.jpg (deflated 0%)\n",
-      "  adding: test_images_output/solidWhiteCurvefirst.jpg (deflated 0%)\n",
-      "  adding: test_images_output/whiteCarLaneSwitchimproved.jpg (deflated 0%)\n",
-      "  adding: test_images_output/solidYellowCurve2improved.jpg (deflated 0%)\n",
-      "  adding: test_images_output/solidYellowCurvefirst.jpg (deflated 0%)\n",
-      "  adding: test_images_output/solidYellowLeftfirst.jpg (deflated 0%)\n",
-      "  adding: test_images_output/solidYellowLeftimproved.jpg (deflated 0%)\n",
-      "  adding: test_images_output/solidYellowCurveimproved.jpg (deflated 0%)\n",
-      "  adding: test_images_output/whiteCarLaneSwitchfirst.jpg (deflated 0%)\n",
-      "  adding: .ipynb_checkpoints/ (stored 0%)\n",
-      "  adding: .ipynb_checkpoints/P1-checkpoint.ipynb (deflated 28%)\n",
-      "  adding: .git/ (stored 0%)\n",
-      "  adding: .git/objects/ (stored 0%)\n",
-      "  adding: .git/objects/8b/ (stored 0%)\n",
-      "  adding: .git/objects/8b/137891791fe96927ad78e64b0aad7bded08bdc (stored 0%)\n",
-      "  adding: .git/objects/05/ (stored 0%)\n",
-      "  adding: .git/objects/05/178eb5c22d3ccb039e3a53af65da487dd69ac6 (stored 0%)\n",
-      "  adding: .git/objects/pack/ (stored 0%)\n",
-      "  adding: .git/objects/pack/pack-5f4b503abaebaa535af4b591a6415a032638857e.idx (deflated 10%)\n",
-      "  adding: .git/objects/pack/pack-5f4b503abaebaa535af4b591a6415a032638857e.pack (deflated 0%)\n",
-      "  adding: .git/objects/5d/ (stored 0%)\n",
-      "  adding: .git/objects/5d/d00a7c982de4d9e8b0497c5973b4d0ce30f468 (stored 0%)\n",
-      "  adding: .git/objects/b0/ (stored 0%)\n",
-      "  adding: .git/objects/b0/60535212a0c0ea0ae248625fe46dc9fcaebcd7 (stored 0%)\n",
-      "  adding: .git/objects/98/ (stored 0%)\n",
-      "  adding: .git/objects/98/0de1cfc42a719377e1a7ef2659b6ad0c657611 (stored 0%)\n",
-      "  adding: .git/objects/33/ (stored 0%)\n",
-      "  adding: .git/objects/33/ab063ccc8decc3eca7bc9a5d13300d05e35b17 (stored 0%)\n",
-      "  adding: .git/objects/31/ (stored 0%)\n",
-      "  adding: .git/objects/31/df868caaa4d4f389a687ecb2aa6d2019990f13 (stored 0%)\n",
-      "  adding: .git/objects/info/ (stored 0%)\n",
-      "  adding: .git/hooks/ (stored 0%)\n",
-      "  adding: .git/hooks/pre-applypatch.sample (deflated 38%)\n",
-      "  adding: .git/hooks/pre-push.sample (deflated 50%)\n",
-      "  adding: .git/hooks/commit-msg.sample (deflated 44%)\n",
-      "  adding: .git/hooks/prepare-commit-msg.sample (deflated 46%)\n",
-      "  adding: .git/hooks/pre-rebase.sample (deflated 59%)\n",
-      "  adding: .git/hooks/update.sample (deflated 68%)\n",
-      "  adding: .git/hooks/pre-commit.sample (deflated 43%)\n",
-      "  adding: .git/hooks/applypatch-msg.sample (deflated 42%)\n",
-      "  adding: .git/hooks/post-update.sample (deflated 27%)\n",
-      "  adding: .git/COMMIT_EDITMSG (deflated 2%)\n",
-      "  adding: .git/refs/ (stored 0%)\n",
-      "  adding: .git/refs/remotes/ (stored 0%)\n",
-      "  adding: .git/refs/remotes/origin/ (stored 0%)\n",
-      "  adding: .git/refs/remotes/origin/master (stored 0%)\n",
-      "  adding: .git/refs/remotes/origin/HEAD (stored 0%)\n",
-      "  adding: .git/refs/tags/ (stored 0%)\n",
-      "  adding: .git/refs/heads/ (stored 0%)\n",
-      "  adding: .git/refs/heads/master (stored 0%)\n",
-      "  adding: .git/logs/ (stored 0%)\n",
-      "  adding: .git/logs/refs/ (stored 0%)\n",
-      "  adding: .git/logs/refs/remotes/ (stored 0%)\n",
-      "  adding: .git/logs/refs/remotes/origin/ (stored 0%)\n",
-      "  adding: .git/logs/refs/remotes/origin/master (deflated 33%)\n",
-      "  adding: .git/logs/refs/remotes/origin/HEAD (deflated 25%)\n",
-      "  adding: .git/logs/refs/heads/ (stored 0%)\n",
-      "  adding: .git/logs/refs/heads/master (deflated 44%)\n",
-      "  adding: .git/logs/HEAD (deflated 44%)\n",
-      "  adding: .git/ORIG_HEAD (stored 0%)\n",
-      "  adding: .git/FETCH_HEAD (deflated 34%)\n",
-      "  adding: .git/packed-refs (deflated 26%)\n",
-      "  adding: .git/description (deflated 14%)\n",
-      "  adding: .git/branches/ (stored 0%)\n",
-      "  adding: .git/config (deflated 32%)\n",
-      "  adding: .git/index (deflated 43%)\n",
-      "  adding: .git/HEAD (stored 0%)\n",
-      "  adding: .git/info/ (stored 0%)\n",
-      "  adding: .git/info/exclude (deflated 28%)\n"
-     ]
-    }
-   ],
-   "source": [
-    "! zip -r current_submission_0715.zip ./"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -1701,9 +1562,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.5.5"
   }
  },
  "nbformat": 4,
